--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.8" />
 
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -34,11 +35,15 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Início</a>
-<!--          <a class="nav-item nav-link" id="login" href="/login">Entrar</a>-->
+          {% if user.is_authenticated %}
+
+          <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
+<!--          <a class="nav-item nav-link" id="home" href="/">Início</a>-->
+          {% else %}
+          <a class="nav-item nav-link" id="login" href="/login">Entrar</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Cadastrar</a>
           <a class="nav-item nav-link" id="calendar" href="/calendar">Agenda</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
+          {% endif %}
         </div>
       </div>
     </nav>
@@ -93,6 +98,5 @@
     ></script>
 
     <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"> </script>
-
   </body>
 </html>
