--- a/website/templates/calendar.base.html
+++ b/website/templates/calendar.base.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
 
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.8" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=0.8"/>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"    />
+    <link href="{{ url_for('static', filename='personalizado.css') }}" rel='stylesheet' />
 
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      crossorigin="anonymous"    />
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous"/>
+
+    <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+            crossorigin="anonymous"/>
 
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous" />
+            crossorigin="anonymous"/>
 
-      <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
+    <script
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"
     ></script>
 
-   <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"
     ></script>
 
     <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/main.min.css">
 
@@ -48,8 +53,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.0/locales-all.js"></script>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"> </script>
-
+    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
@@ -72,7 +76,7 @@
           },
           navLinks: true,
           locale: 'pt-br',
-
+          selectHelper: true,
           dateClick: function(info) {
 
            },
@@ -84,17 +88,22 @@
             $('#mymodal').modal('show');
            },
 
-        eventClick:  function(events, jsEvent, view) {
-            $('#modalTitle').html(event.title);
-            $('#modalBody').html(event.description);
-            $('#eventUrl').attr('href',event.url);
-            $('#calendarModal').modal();
-        },
 
+          eventClick: function(info, event, jsEvent, view) {
+           $('#visualizar #title').text(info.event.title);
+           $('#visualizar #title').val(info.event.title);
+           $('#visualizar #start').text(info.event.start.toLocaleString());
+           $('#visualizar #start').val(info.event.start.toLocaleString());
+           $('#visualizar #end_event').text(info.event.end.toLocaleString());
+           $('#visualizar #end_event').val(info.event.end.toLocaleString());
+           $('#visualizar #info_form').text(info.event.info);
+           $('#visualizar').modal('show');
+           return false;
+           },
 
-         eventDurationEditable: true,
-         eventTimeFormat: {hour: 'numeric', minute: '2-digit',meridiem: false
-         },
+          eventDurationEditable: true,
+          eventTimeFormat: {hour: 'numeric', minute: '2-digit',meridiem: false
+           },
          events: [
          {% for row in my_events %}
          {
@@ -102,7 +111,7 @@
             title: '{{row.title}}',
             start: '{{row.start}}',
             end: '{{row.end_event}}',
-            info: '{{row.info}}'
+            extendedProps: {info: '{{row.info}}'},
          },
          {% endfor %}
 
@@ -110,115 +119,221 @@
         });
         calendar.render();
       });
+
     </script>
 
-        <title>{% block title %}Calendário{% endblock %}</title>
+    <title>{% block title %}Calendário{% endblock %}</title>
 
-  </head>
+</head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-  <button class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbar">
+    <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-        <a class="nav-link" href="/">Início<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" id="signUp" href="/sign-up">Cadastrar</a>
-        <a class="nav-link" href="/calendar"> Agenda <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
+            <!--        <a class="nav-link" href="/">Início<span class="sr-only">(current)</span></a>-->
+            <a class="nav-link" href="/calendar"> Agenda <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" id="logout" href="/logout">Sair</a>
+
         </div>
-  </div>
+    </div>
 </nav>
- <br> </br>
-  <div class="container">
+<p></p>
+<div class="container">
     <div class="row">
         <div class="col md-12">
 
             <div class="jumbotron p-2">
 
-                <h4>Agenda de Consultas<button type="button"  class="btn btn-success float-right"
-                data-toggle="modal" data-target="#mymodal">Adicionar</button> </h4>
+                <h4>Agenda de Consultas
+                    <button type="button" class="btn btn-success float-right"
+                            data-toggle="modal" data-target="#mymodal">Adicionar
+                    </button>
+                </h4>
             </div>
         </div>
     </div>
-  </div>
+</div>
 
 <div id="mymodal" class="modal fade" role="dialog">
-   <div class="modal-dialog">
-      <div class="modal-content">
-         <div class="modal-header">
 
-            <h4 class="modal-title">Nova Consulta</h4>
-         </div>
-         <div class="modal-body">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
 
-            <form action="{{url_for('cal.add')}}" method="POST">
+                <h4 class="modal-title">Nova Consulta</h4>
+            </div>
+            <div class="modal-body">
 
-               <div class="form-group">
-                  <label>Consulta:</label>
-                  <input type="text"
-                   class="form-control"
-                   name="title"
-                   id="title" placeholder="Título">
-               </div>
+                <form action="{{url_for('cal.add')}}" method="POST">
 
-                <div class="form-group">
-                  <label>Início:</label>
-                  <input type="text"
-               class="form-control"
-               name="start"
-               id="start"
-               onkeypress="DataHora(event, this)"
-               placeholder="aaaa-mm-dd hh:mm"   >
-               </div>
+                    <div class="form-group">
+                        <label>Consulta:</label>
+                        <input type="text"
+                               class="form-control"
+                               name="title"
+                               id="title" placeholder="Título">
+                    </div>
 
-                <div class="form-group">
-                  <label>Até:</label>
-                  <input type="text"
-               class="form-control"
-               name="end_event"
-               id="end_event"
-               onkeypress="DataHora(event, this)"
-                placeholder="aaaa-mm-dd hh:mm">
-               </div>
+                    <div class="form-group">
+                        <label>Início:</label>
+                        <input type="text"
+                               class="form-control"
+                               name="start"
+                               id="start"
+                               onkeypress="DataHora(event, this)"
+                               placeholder="aaaa-mm-dd hh:mm">
+                    </div>
 
-                <div class="form-group row">
-                    <label class="form-group">Anotações:</label>
-                    <input type="text"
-               class="form-control"
-               name="info"
-               id="info"
-               placeholder="Mais informações">
+                    <div class="form-group">
+                        <label>Até:</label>
+                        <input type="text"
+                               class="form-control"
+                               name="end_event"
+                               id="end_event"
+                               onkeypress="DataHora(event, this)"
+                               placeholder="aaaa-mm-dd hh:mm">
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="form-group">Anotações:</label>
+                        <input type="text"
+                               class="form-control"
+                               name="info"
+                               id="info"
+                               placeholder="Mais informações">
+                    </div>
+
+
+                    <div class="form-group">
+                        <button class="btn btn-primary" type="submit">Salvar</button>
+                        <button class="btn btn-secondary" type="reset">Excluir</button>
+                    </div>
+
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% for row in my_events %}
+<div class="modal fade" id="visualizar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     data-backdrop="static">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Detalhes do Evento</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="visualizar">
+                    <dl class="row">
+                        <dt class="col-sm-3">Título:</dt>
+                        <dd class="col-sm-9" id="title"></dd>
+
+                        <dt class="col-sm-3">Início:</dt>
+                        <dd class="col-sm-9" id="start"></dd>
+
+                        <dt class="col-sm-3">Fim:</dt>
+                        <dd class="col-sm-9" id="end_event"></dd>
+
+                        <dt class="col-sm-3">Informações:</dt>
+                        <dd class="col-sm-9" id="info"></dd>
+                    </dl>
+                    <button class="btn btn-canc-vis btn-warning">Editar</button>
+                </div>
+                <div class="form">
+                    <form class="form-horizontal" method="POST" action="{{url_for('cal.update')}}">
+
+                        <div class="form-group">
+                            <label>Consulta:</label>
+                            <input type="text"
+                                   class="form-control"
+                                   name="title"
+                                   id="title" placeholder="Título"
+                                   value="{{row.title}}">
+                        </div>
+
+                        <div class="form-group">
+                            <label>Início:</label>
+                            <input type="text"
+                                   class="form-control"
+                                   name="start"
+                                   id="start"
+                                   onkeypress="DataHora(event, this)"
+                                   placeholder="aaaa-mm-dd hh:mm"
+                                   value="{{row.start}}">
+                        </div>
+
+                        <div class="form-group">
+                            <label>Até:</label>
+                            <input type="text"
+                                   class="form-control"
+                                   name="end_event"
+                                   id="end_event"
+                                   onkeypress="DataHora(event, this)"
+                                   placeholder="aaaa-mm-dd hh:mm"
+                                   value="{{row.end_event}}">
+                        </div>
+
+                        <div class="form-group">
+                            <label class="form-group">Anotações:</label>
+                            <input type="text"
+                                   class="form-control"
+                                   name="info"
+                                   id="info"
+                                   placeholder="Informações"
+                                   value="{{row.info}}">
+                        </div>
+
+                        <input type="hidden" class="form-control" name="id" id="id" value="{{row.id}}">
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button href="/update/{{row.id}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.id}}">Salvar</button>
+                                <a href="/delete/{{row.id}}" class="btn btn-danger btn-xs" onclick="return confirm('Confirmar exclusão?')">Excluir</a>
+                                <button type="button" class="btn btn-canc-edit btn-primary">Cancelar</button>
+
+                            </div>
+                        </div>
+                    </form>
                 </div>
 
+            </div>
+        </div>
 
-               <div class="form-group">
-                  <button class="btn btn-primary" type="submit">Salvar</button>
-                   <button class="btn btn-secondary" type="reset">Excluir</button>
-               </div>
-
-
-            </form>
-         </div>
-         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-         </div>
-      </div>
-   </div>
+    </div>
 </div>
-
-
-</div>
+{% endfor %}
 
 {%block body %}
-   <div class="container">
+<div class="container">
     <div id="calendar"></div>
-  </div>
+</div>
 {% endblock body %}
-  </body>
+
+
+    <script>
+			$('.btn-canc-vis').on("click", function() {
+				$('.form').slideToggle();
+				$('.visualizar').slideToggle();
+			});
+			$('.btn-canc-edit').on("click", function() {
+				$('.visualizar').slideToggle();
+				$('.form').slideToggle();
+			});
+
+    </script>
+</body>
 </html>
