--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,49 +1,49 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1 align="center">Appointments</h1>
-<ul class="list-group list-group-flush" id="notes">
-    {% for note in user.notes %}
-    <li class="list-group-item">{{ note.data }}</li>
-    {% endfor %}
-</ul>
-    <form action="/add" method="POST">
-        <div class="mb-3">
-            <label for="title" class="form-label">Appointment Title</label>
-            <input type="text"
-                   class="form-control"
-                   name="title"
-                   id="title" placeholder="What's going on today?">
-        </div>
-        <div class="mb-3">
-        <label for="start" class="form-label">Start date</label>
-        <input type="text"
-               class="form-control"
-               name="start"
-               id="start"
-               placeholder="YYYY-MM-DD">
-        </div>
-        <div class="mb-3">
-        <label for="end" class="form-label">End date</label>
-        <input type="text"
-               class="form-control"
-               name="end"
-               id="end"
-               placeholder="YYYY-MM-DD">
-        </div>
-         <div class="mb-3">
-        <label for="info" class="form-label">Event url</label>
-        <input type="text"
-               class="form-control"
-               name="info"
-               id="info"
-               placeholder="Add event information">
-        </div>
+<!--<h1 align="center">Appointments</h1>-->
+<!--<ul class="list-group list-group-flush" id="notes">-->
+<!--    {% for note in user.notes %}-->
+<!--    <li class="list-group-item">{{ note.data }}</li>-->
+<!--    {% endfor %}-->
+<!--</ul>-->
+<!--    <form action="/add" method="POST">-->
+<!--        <div class="mb-3">-->
+<!--            <label for="title" class="form-label">Appointment Title</label>-->
+<!--            <input type="text"-->
+<!--                   class="form-control"-->
+<!--                   name="title"-->
+<!--                   id="title" placeholder="What's going on today?">-->
+<!--        </div>-->
+<!--        <div class="mb-3">-->
+<!--        <label for="start" class="form-label">Start date</label>-->
+<!--        <input type="text"-->
+<!--               class="form-control"-->
+<!--               name="start"-->
+<!--               id="start"-->
+<!--               placeholder="YYYY-MM-DD">-->
+<!--        </div>-->
+<!--        <div class="mb-3">-->
+<!--        <label for="end" class="form-label">End date</label>-->
+<!--        <input type="text"-->
+<!--               class="form-control"-->
+<!--               name="end"-->
+<!--               id="end"-->
+<!--               placeholder="YYYY-MM-DD">-->
+<!--        </div>-->
+<!--         <div class="mb-3">-->
+<!--        <label for="info" class="form-label">Event url</label>-->
+<!--        <input type="text"-->
+<!--               class="form-control"-->
+<!--               name="info"-->
+<!--               id="info"-->
+<!--               placeholder="Add event information">-->
+<!--        </div>-->
 
-        <br />
-        <button type="submit"
-            class="btn btn-primary">Add Appointment</button
-    </form>
-</div>
-</form>
+<!--        <br />-->
+<!--        <button type="submit"-->
+<!--            class="btn btn-primary">Add Appointment</button-->
+<!--    </form>-->
+<!--</div>-->
+<!--</form>-->
 {% endblock %}
